--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "source": [
     "import pandas as pd"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "source": [
     "df_train = pd.read_csv('../sentiment_analysis/train.tsv', sep='\\t')\n",
     "df_test = pd.read_csv('../sentiment_analysis/test.tsv', sep='\\t')"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "source": [
     "df_train"
    ],
@@ -168,14 +168,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "source": [
     "df_test"
    ],
@@ -297,7 +297,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 12
     }
    ],
    "metadata": {}
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import wordnet\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "# Text pre-processing\n",
     "def get_pre_preprocessing(df1,col):\n",
@@ -401,6 +401,24 @@
     "    return df1"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "df_train = get_pre_preprocessing(df_train,'Phrase')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3.5825579340894045\n",
+      "3.5825579340894045\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
