--- a/code.ipynb
+++ b/code.ipynb
@@ -1211,7 +1211,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#https://machinelearningmastery.com/hyperparameter-optimization-with-random-search-and-grid-search/"
+    "#https://machinelearningmastery.com/hyperparameter-optimization-with-random-search-and-grid-search/\n",
+    "#linear svc, logistic reg "
    ],
    "outputs": [],
    "metadata": {}
